Remove margin to fix horizontal scrolling?

--- a/views/styles/profile.css
+++ b/views/styles/profile.css
@@ -217,7 +217,6 @@ p {
     display: grid;
     grid-template-columns: 20% 50% 30%;
     grid-template-rows: 220px 15% 15% 1fr;
-    margin: 0 2%;
     padding-bottom: 3%;
   }
 
